packages/@adobe/spectrum-css-temp/components/dialog/index.css
/* ... */
.spectrum-Dialog {
  /* Be a flexbox to allow a full sized content area that scrolls */
  display: flex;

  /* Allow 100% width, taking into account padding */
  box-sizing: border-box;

  /* Be no bigger than max-width, but also be 90% if the viewport is smaller than max-width */
  width: fit-content;
  min-width: var(--spectrum-dialog-min-width);
  max-width: 100%;

  max-height: inherit;

  outline: none;
}

.spectrum-Dialog--small {
  width: var(--spectrum-dialog-small-width);
}

.spectrum-Dialog--medium {
  width: var(--spectrum-dialog-medium-width);
}

.spectrum-Dialog--large {
  width: var(--spectrum-dialog-large-width);
}

.spectrum-Dialog-hero {
  grid-area: hero;
  height: var(--spectrum-dialog-hero-height);

  border-top-left-radius: var(--spectrum-dialog-border-radius);
  border-top-right-radius: var(--spectrum-dialog-border-radius);

  background-size: cover;
  background-position: center center;
  overflow: hidden;
}

.spectrum-Dialog .spectrum-Dialog-grid {
  display: grid;
  grid-template-columns: var(--spectrum-dialog-padding) auto 1fr auto minmax(0, auto) var(--spectrum-dialog-padding);
  grid-template-rows: auto var(--spectrum-dialog-padding) auto auto 1fr auto var(--spectrum-dialog-padding);
  grid-template-areas:
    "hero hero    hero    hero        hero        hero"
    ".    .       .       .           .           ."
    ".    heading header  header      typeIcon    ."
    ".    divider divider divider     divider     ."
    ".    content content content     content     ."
    ".    footer  footer  buttonGroup buttonGroup ."
    ".    .       .       .           .           .";
  width: 100%;
}

.spectrum-Dialog-heading {
  grid-area: heading;

  margin: 0;

  font-size: var(--spectrum-dialog-title-text-size);
  font-weight: var(--spectrum-dialog-title-text-font-weight);
  line-height: var(--spectrum-dialog-title-text-line-height);

  outline: none; /* Hide focus outline */

  padding-inline-end: var(--spectrum-dialog-gap-size);

  &.spectrum-Dialog-heading--noHeader {
    grid-area: heading-start / heading-start / header-end / header-end;
    padding-inline-end: 0;
  }
}

.spectrum-Dialog-header {
  grid-area: header;
  display: flex;
  /* Without this, buttons will be stretched */
  align-items: center;
  justify-content: flex-end;

  box-sizing: border-box;

  outline: none; /* Hide focus outline around header */
}

.spectrum-Dialog-typeIcon {
  grid-area: typeIcon;
}

.spectrum-Dialog .spectrum-Dialog-divider {
  grid-area: divider;
  width: 100%;
  margin-top: var(--spectrum-dialog-rule-margin-top);
  margin-bottom: var(--spectrum-dialog-rule-margin-bottom);
}

.spectrum-Dialog--noDivider {
  .spectrum-Dialog-divider {
    display: none;
  }
}

.spectrum-Dialog-content {
  grid-area: content;
  box-sizing: border-box;

  /*
  v2 is currently worse, inputs that get focus rings get a slight clipping unless overflow: visible replaces this line
  we should think of a better way to handle this, see padding/margin below for fix
  */
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;

  outline: none; /* Hide focus outline */

  font-size: var(--spectrum-dialog-content-text-size);
  font-weight: var(--spectrum-dialog-content-text-font-weight);
  line-height: var(--spectrum-dialog-content-text-line-height);

  /*
  this is kinda dumb, but needed for the keyboard focus rings so they don't get clipped.
  is there a better way to treat this
  it's needed in every instance of overflow being set to anything other than visible
  */
  padding: calc(var(--spectrum-global-dimension-size-25) * 2);
  margin: calc(var(--spectrum-global-dimension-size-25) * -2);
}


.spectrum-Dialog-footer {
  grid-area: footer;
  /* this padding isn't built into the grid because it disappears with this footer */
  padding-block-start: var(--spectrum-global-dimension-static-size-500);

  display: flex;
  flex-wrap: wrap;

  outline: none; /* Hide focus outline */

  /* Both selectors are required to override the button + button rule */
  > *,
  > .spectrum-Button + .spectrum-Button {
    margin-bottom: 0;
  }
}

.spectrum-Dialog-buttonGroup {
  grid-area: buttonGroup;
  /* this padding isn't built into the grid because it disappears with this buttonGroup */
  padding-block-start: var(--spectrum-global-dimension-static-size-500);
  display: flex;
  justify-content: flex-end;
  /* this padding should be safe as button group is always end aligned */
  padding-inline-start: var(--spectrum-dialog-gap-size);
  /* Fixes Firefox buttongroup overflow (switch from horizontal buttongroup to vertical buttongroup) */
  max-width: 100%;

  &.spectrum-Dialog-buttonGroup--noFooter {
    grid-area: footer-start / footer-start / buttonGroup-end / buttonGroup-end;
  }
}

.spectrum-Dialog.spectrum-Dialog--dismissable .spectrum-Dialog-grid {
  grid-template-columns: var(--spectrum-dialog-padding) auto 1fr auto minmax(0, auto) minmax(0, var(--spectrum-dialog-close-button-size)) var(--spectrum-dialog-padding);
  grid-template-rows: auto var(--spectrum-dialog-padding) auto auto 1fr auto var(--spectrum-dialog-padding);
  grid-template-areas:
    "hero hero    hero    hero        hero        hero        hero"
    ".    .       .       .           .           closeButton closeButton"
    ".    heading header  header      typeIcon    closeButton closeButton"
    ".    divider divider divider     divider     divider     ."
    ".    content content content     content     content     ."
    ".    footer  footer  buttonGroup buttonGroup buttonGroup ."
    ".    .       .       .           .           .           .";

  .spectrum-Dialog-buttonGroup {
    display: none;
  }
  .spectrum-Dialog-footer {
    grid-area: footer / footer/ buttonGroup / buttonGroup;
  }
}
/* ... */

